Create and run main.js successfully with alert

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <div class="main-container">
+      <section class="clock-area">
+        <h1 class="clock">
+          <span class="hours"></span>
+          <span class="minutes"></span>
+          <span class="seconds"></span>
+        </h1>
+      </section>
     </div>
-
+  <script type="text/javascript" src="assets/javascript/main.js"></script>
   </body>
 </html>
