--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <title>Color Clocks</title>
   </head>
   <body>
-    <div class="main-container">
-      <section class="clock-area">
-        <h1 class="clock">
-          <span class="hours"></span>
-          <span class="minutes"></span>
-          <span class="seconds"></span>
-        </h1>
-      </section>
-    </div>
-  <script type="text/javascript" src="assets/javascript/main.js"></script>
+    <h1 class="clock">
+      <span class="hours">12</span>
+      <span>:</span>
+      <span class="minutes">12</span>
+      <span>:</span>
+      <span class="seconds">12</span>
+    </h1>
+    <script type="text/javascript" src="assets/javascript/main.js"></script>
   </body>
 </html>
