Add timer bar functionality with <hr> element and applying result of getPercentOfMinute() function to its width

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="minutes">12</span>
       <span>:</span>
       <span class="seconds">12</span>
-      <hr>
+      <hr class="timer-bar">
     </h1>
     <script type="text/javascript" src="assets/javascript/main.js"></script>
   </body>
