Change font and adjust margins

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://fonts.googleapis.com/css?family=Righteous" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/stylesheets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <title>Color Clocks</title>
   </head>
   <body>
     <h1 class="clock">
-      <span class="hours">00</span>
-      <span>:</span>
-      <span class="minutes">00</span>
-      <span>:</span>
-      <span class="seconds">00</span>
+      <div>
+        <span class="hours">00</span>
+        <span>:</span>
+        <span class="minutes">00</span>
+        <span>:</span>
+        <span class="seconds">00</span>
+      </div>
       <hr class="timer-bar">
     </h1>
     <script type="text/javascript" src="assets/javascript/main.js"></script>
