--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="http://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/stylesheets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-    <title>Color Clocks</title>
+    <title>Color Clock</title>
   </head>
   <body>
     <h1 class="clock">
