Change clock hover effect to CSS transition from Javascript event listener

--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     <title>Color Clock</title>
   </head>
   <body>
-    <h1 class="clock">
-      <div>
+    <section class="clock">
+      <div class="time">
         <span class="hours">00</span>
         <span>:</span>
         <span class="minutes">00</span>
         <span>:</span>
         <span class="seconds">00</span>
       </div>
+      <div class="hex-color">
+        <span class="hex-hours"></span>
+        <span>:</span>
+        <span class="hex-minutes"></span>
+        <span>:</span>
+        <span class="hex-seconds"></span>
+      </div>
       <hr class="timer-bar">
-    </h1>
+    </section>
     <script type="text/javascript" src="assets/javascript/main.js"></script>
   </body>
 </html>
